# rdotenv

./: Cargo.toml  README.md
src/: lib.rs
tests/: .env  .env.invalid  parsing.rs
