[package]
name = "rdotenv"
version = "0.1.1"
edition = "2021"
autotests = true
readme = "README.md"
repository = "https://github.com/0xleft/rdotenv"
license = "MIT"
description = "A simple rust library for parsing .env files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "parsing_test"
path = "tests/parsing.rs"